--- a/vi-hart-notebook-number-grid/grid.html
+++ b/vi-hart-notebook-number-grid/grid.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Vi-Hart Notebook Number Grid</title>
+    <title>Vihart Notebook Number Grid</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
-        integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styling.css">
     <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"></script>
     <script src="renderer.js"></script>
@@ -14,9 +11,10 @@
 <body>
     <div class="container">
         <table class="table table-bordered">
-            <tbody id="grid-body">
-            </tbody>
+            <tbody id="grid-body"></tbody>
         </table>
+        <br>
+        <a href="https://www.youtube.com/watch?v=Twik7wqdwZU" target="_blank">Watch the Vihart video that inspired this</a> (notebook drawing begins around 12:10)
     </div>
 </body>
 </html>
